# Soulkiller

./: .env.example  .gitignore  CONTRIBUTING.md  INSTALL.md  README.md  install.py  pyproject.toml
.github/workflows/: ci.yml  pages.yml
demo/: config.example.env  profile.seed.json
demo/expected_outputs/: model_portrait.md  model_profile.md
docs/: ADAPTERS.md  CONFIGURATION.md  PUBLIC_RUNTIME.md
docs/architecture/: SOULKILLER.md
docs/plans/: 2026-04-16-amber-ui.md
hooks/shared/: last-message.ts  smelt-retrieval.ts
hooks/soulkiller-bootstrap/: HOOK.md  handler.ts
hooks/soulkiller-capture/: HOOK.md  handler.ts
scripts/: build_static_demo.py
src/lib/: __init__.py  config.py  inbox.py  llm_resilience.py  log.py  memory_context.py  memory_provider.py  openclaw_client.py  provider_llm_client.py  runtime_client.py
src/soulkiller/: __init__.py  appraisal.py  attachment.py  backfill.py  biofeedback.py  biofeedback_gadgetbridge.py  biofeedback_gb_ingest.py  budget_bridge.py  caps.py  checkin.py  checkin_followup.py  constructs.py  daily_stress.py  decisions.py  defenses.py  demo_runner.py  demo_webui.py  domain_prober.py  dual_process.py  (+66 more)
tests/: test_amber_integration.py  test_demo_runner.py  test_demo_webui.py  test_docs_sanitization_markers.py  test_hook_sanitization_markers.py  test_inbox_util.py  test_memory_context.py  test_memory_provider.py  test_packaging_scaffold.py  test_python_depersonalization_markers.py  test_python_sanitization_markers.py  test_reply_extractor_context.py  test_repo_readiness.py  test_webui_amber.py  test_webui_memory_provider.py
